# cfg

./: README.md  pyproject.toml
cfg/: __init__.py  predicates.py
examples/: basic.py  custom_predicate.py
